--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 <head>
 
-    <!-- <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" /> -->
-    <!-- <script defer src="https://pyscript.net/alpha/pyscript.js"></script> -->
+    link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" /> 
+    <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
 
-    <link rel="stylesheet" href="pyscript_files/pyscript.css" />
-    <script defer src="pyscript_files/pyscript.js"></script>
+<!--     <link rel="stylesheet" href="pyscript_files/pyscript.css" />
+    <script defer src="pyscript_files/pyscript.js"></script> -->
 
 
     <title>Pyscript - Hello World</title>
