--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 
-    link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" /> 
+    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" /> 
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
 
 <!--     <link rel="stylesheet" href="pyscript_files/pyscript.css" />
