--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <title>Pyscript - Hello World</title>
 
 
-    <py-script src="/index.py"></py-script>
+<!--     <py-script src="/index.py"></py-script> -->
 
-    <!-- <py-script>
+    <py-script>
         pyscript.write("hw", "Hello World!!")
         pyscript.write("py", "by pyscript")
-    </py-script> -->
+    </py-script>
 
 </head>
 <body>
